--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,19 @@
 body
 {
-    color: coral;
-    text-align: center;
+    color: rgb(17, 107, 72);
+    text-align: left;
     font-family: "Arial";
+    font-size: 16px;
+}
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+#container h1
+{
+    font-size: 20px;
 }
