--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
     color: rgb(17, 107, 72);
     text-align: left;
-    font-family: "Arial";
+    font-family: Courier;
     font-size: 16px;
 }
 #container
